syntax = "proto3";

package auth;

option go_package = "github.com/tird4d/go-microservices/auth_service/proto;proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  string user_id = 1;
  string email = 2;
}
